# obscura-server

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  justfile  openapi.yaml  repro_proto.rs  server_pid
.github/: dependabot.yml
.github/agents/: copilot-instructions.md
.github/workflows/: bump_version.yml  ci.yml  docker-publish.yml  publish.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  RELEASING.md  storage.md
docs/design/: 000-roadmap.md  001-encrypted-backup.md  002-profile-management.md  003-sealed-sender.md  004-push-notifications.md  005-observability.md  006-operational-hardening.md
docs/planning/: BACKUP.md  MISC.md  OBSERVABILITY.md  PROFILES.md  PUSH_NOTIFICATIONS.md  SEALED_SENDER.md
migrations/: 001_core_and_auth.sql  001_create_users_table.sql  002_create_prekeys_tables.sql  002_signal_protocol.sql  003_create_messages_table.sql  003_messaging_and_delivery.sql  004_add_message_type.sql  005_add_refresh_tokens.sql  006_create_attachments_table.sql  007_create_push_tokens_table.sql  008_create_backups_table.sql  009_add_client_message_metadata.sql  010_client_message_id_not_null.sql
proto/: obscura.proto
specs/001-device-takeover/: data-model.md  plan.md  spec.md
specs/001-device-takeover/checklists/: requirements.md
specs/001-device-takeover/contracts/: openapi.yaml
specs/001-ephemeral-media-messaging/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-ephemeral-media-messaging/contracts/: openapi.yaml  websockets.md
specs/001-signal-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-signal-server/checklists/: requirements.md
specs/001-signal-server/contracts/: openapi.yaml
specs/002-device-takeover/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-key-security/: plan.md
specs/1-ephemeral-media-messaging/: spec.md
specs/1-ephemeral-media-messaging/checklists/: requirements.md
src/: config.rs  error.rs  lib.rs  main.rs  proto.rs  telemetry.rs
src/adapters/: mod.rs  redis.rs
src/adapters/database/: attachment_repo.rs  backup_repo.rs  device_repo.rs  key_repo.rs  message_repo.rs  mod.rs  push_token_repo.rs  refresh_token_repo.rs  user_repo.rs
src/adapters/database/records/: attachment.rs  backup.rs  device.rs  keys.rs  message.rs  mod.rs
src/adapters/push/: fcm.rs  mod.rs
src/adapters/redis/: cache.rs  idempotency_repo.rs  mod.rs  notification_repo.rs  submission_cache.rs
src/adapters/storage/: mod.rs  s3.rs
src/api/: attachments.rs  auth.rs  backup.rs  devices.rs  docs.rs  gateway.rs  health.rs  keys.rs  messages.rs  middleware.rs  mod.rs  notifications.rs  push_tokens.rs  rate_limit.rs
src/api/dto/: attachments.rs  auth.rs  common.rs  crypto.rs  keys.rs  mod.rs
src/api/schemas/: attachments.rs  auth.rs  common.rs  crypto.rs  devices.rs  gateway.rs  health.rs  keys.rs  messaging.rs  mod.rs  notifications.rs  push_tokens.rs
src/core/: account_service.rs  attachment_service.rs  auth.rs  auth_service.rs  crypto_types.rs  gateway_service.rs  health_service.rs  identity_service.rs  key_service.rs  message.rs  message_service.rs  mod.rs  notification.rs  user.rs
src/core/gateway/: ack_batcher.rs  message_pump.rs  mod.rs  session.rs
src/domain/: attachment.rs  auth.rs  auth_session.rs  backup.rs  crypto.rs  device.rs  keys.rs  message.rs  mod.rs  notification.rs  session.rs  user.rs
src/services/: account_service.rs  attachment_service.rs  auth_service.rs  backup_service.rs  crypto_service.rs  device_service.rs  health_service.rs  identity_service.rs  key_service.rs  message_service.rs  mod.rs  notification.rs  notification_service.rs  push_token_service.rs  rate_limit_service.rs
src/services/gateway/: ack_batcher.rs  message_pump.rs  mod.rs  prekey_pump.rs  session.rs
src/services/notification/: distributed.rs  mod.rs  provider.rs  scheduler.rs  worker.rs
src/storage/: attachment_repo.rs  key_repo.rs  message_repo.rs  mod.rs  models.rs  redis.rs  refresh_token_repo.rs  user_repo.rs  valkey.rs
src/storage/records/: attachment.rs  auth.rs  keys.rs  message.rs  mod.rs  user.rs
src/workers/: attachment_cleanup.rs  backup_cleanup.rs  message_cleanup.rs  mod.rs  notification.rs  push_notification.rs  refresh_token_cleanup.rs
tests/: common.rs  integration_ack_batching.rs  integration_attachments.rs  integration_auth.rs  integration_backup.rs  integration_batching.rs  integration_blocking.rs  integration_cache.rs  integration_cleanup.rs  integration_devices.rs  integration_docs.rs  integration_draining_bug.rs  integration_error_cases.rs  integration_full_system.rs  integration_gateway.rs  integration_gateway_chaos.rs  integration_gateway_ticket.rs  integration_health.rs  integration_heartbeat.rs  integration_key_formats.rs  integration_key_limits.rs  integration_key_rotation.rs  integration_keys.rs  integration_limits.rs  integration_messaging.rs  integration_multi_node.rs  integration_notification_lag.rs  integration_notifications.rs  integration_pagination.rs  integration_prekey_signaling.rs  integration_prekey_status.rs  integration_push_token.rs  integration_push_worker.rs  integration_rate_limit.rs  integration_registration.rs  integration_security.rs  integration_shutdown.rs  integration_storage_resilience.rs  integration_takeover.rs  integration_timeouts.rs  (+2 more)
