[package]
name = "obscura-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid", "time"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
tokio-tungstenite = "0.28.0"
tower = "0.5.2"
