[package]
name = "obscura-server"
version = "0.3.10"
edition = "2024"
description = "A server for relaying secure messages using the Signal Protocol"
license = "GPL-3.0-or-later"
repository = "https://github.com/barrelmaker97/obscura-server"
keywords = ["messaging", "photo", "encrypted", "secure", "signal"]
authors = ["Nolan Cooper <nolancooper97@gmail.com>"]

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-sdk-s3 = { version = "1.120.0", features = ["http-1x"] }
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive", "env"] }
dashmap = "6.1.0"
futures = "0.3.31"
xeddsa = "1.0.2"
curve25519-dalek = "4.1"
ed25519-dalek = "2.2"
hex = "0.4.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
ipnetwork = "0.21.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
prost = "0.14.1"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid", "time"] }
thiserror = "2.0.17"
time = { version = "0.3.45", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io", "codec"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "util"] }
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
tracing-opentelemetry = "0.32"
opentelemetry-semantic-conventions = "0.31"

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
curve25519-dalek = "4.1"
tokio-tungstenite = "0.28.0"
reqwest = { version = "0.12.28", features = ["json", "stream"] }
