[package]
name = "obscura-server"
version = "0.6.2"
edition = "2024"
description = "A server for relaying secure messages using the Signal Protocol"
license = "GPL-3.0-or-later"
repository = "https://github.com/barrelmaker97/obscura-server"
keywords = ["messaging", "photo", "encrypted", "secure", "signal"]
authors = ["Nolan Cooper <nolancooper97@gmail.com>"]

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
aws-config = "1.8"
aws-credential-types = "1.2"
aws-sdk-s3 = { version = "1.120", features = ["http-1x"] }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1.9"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6.1"
futures = "0.3"
xeddsa = "1.0"
curve25519-dalek = "4.1"
ed25519-dalek = "2.2"
hex = "0.4"
http-body = "1.0"
http-body-util = "0.1"
ipnetwork = "0.21"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
prost = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid", "time"] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.49", features = ["full"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.19", features = ["v4", "v7", "serde"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "util", "timeout"] }
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
tracing-opentelemetry = "0.32"
opentelemetry-semantic-conventions = "0.31"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1.89"
backon = "1.6.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
regex = "1.12.3"

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
curve25519-dalek = "4.1"
tokio-tungstenite = "0.28.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_imports = "warn"
unused_qualifications = "warn"
unused_variables = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

dbg_macro = "deny"
clone_on_ref_ptr = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unwrap_used = "warn"
